Fixed chicklet max-width and filters misalignment.

--- a/styles/app.css
+++ b/styles/app.css
@@ -113,7 +113,7 @@ label {
 	overflow: hidden;
 	text-overflow:ellipsis;
 	white-space:nowrap;
-	max-width: 250px;
+	max-width: 300px;
 }
 
 #filter .filter-item {
